# encye-lexicon

./: .gitignore  README.md  TOPICS.txt
backend/: README.md  agent.py  main.py  models.py  openai_agent.py  pyproject.toml
docs/: ux-design.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: api.ts  index.css  main.tsx  router.tsx  store.ts
frontend/src/components/: CompareDialog.tsx  Library.tsx  SummaryDetailSheet.tsx  TokenUsageBadge.tsx  app-sidebar.tsx  root-layout.tsx
frontend/src/components/ui/: checkbox.tsx  sonner.tsx  switch.tsx
frontend/src/pages/: BatchSummarizerPage.tsx  LibraryPage.tsx  SettingsPage.tsx  SummarizerPage.tsx
