[project]
name = "encye-lexicon-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.138.1",
    "google-adk>=2.3.0",
    "litellm>=1.89.4",
    "lxml>=5.0.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]
